--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 
 body {
@@ -11,4 +12,295 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+}
+
+button{
+        border: none;
+}
+
+.item{
+  background: #f6f6fe;
+
+  border-radius: 8px;
+    padding: 16px;
+    max-width: 392px;
+ 
+  display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 16px;
+
+    margin-bottom: 24px;
+}
+
+h2{
+  font-weight: 600;
+    font-size: 24px;
+  
+    line-height: 1.33333;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.item>ul {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 8px;
+  width: 100%;
+}
+
+.item>ul>li{
+border: 1px solid #808080;
+  border-radius: 4px;
+  width: 100%;
+  height: 40px;
+    
+    display: flex;
+    align-items: center;
+    padding: 8px 16px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+}
+
+/* 2 */
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 24px;
+}
+
+.gallery-item {
+  width: calc((100% - 48px) / 3);
+  max-width: 360px;
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+}
+
+img {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+}
+
+/* 3 */
+
+#name-input{
+  border: 1px solid #808080;
+    border-radius: 4px;
+    width: 360px;
+    height: 40px;
+
+    padding: 8px 16px;
+    margin-bottom: 16px;
+
+ 
+}
+
+#name-input::placeholder {
+   font-weight: 400;
+    font-size: 16px;
+  
+    /* line-height: 24px; */
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+}
+
+#name-output, h1{
+  font-weight: 600;
+    font-size: 24px;
+  
+    /* line-height: 32px; */
+    line-height: 1.33333;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+}
+
+/* 4 */
+
+.login-form, label {
+display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 8px;
+
+
+}
+
+.login-form label,
+.login-form input{
+
+  font-weight: 400;
+  font-size: 16px;
+
+  /* line-height: 24px; */
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.login-form input{
+  border: 1px solid #808080;
+    border-radius: 4px;
+    width: 360px;
+    height: 40px;
+
+    outline: none;
+    padding: 8px 16px;
+}
+
+.login-form button{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 10px;
+
+    border-radius: 8px;
+      padding: 8px 16px;
+      width: 86px;
+      height: 40px;
+
+      background: #4e75ff;
+
+      font-weight: 500;
+        font-size: 16px;
+      
+        /* line-height: 24px; */
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #fff;
+
+}
+
+/* 5 */
+
+.widget{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 16px;
+
+}
+
+.widget p,
+.color{
+  font-weight: 400;
+    font-size: 16px;
+  
+    /* line-height: 24px; */
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+}
+
+.widget .change-color{
+  border-radius: 8px;
+    padding: 8px 16px;
+    width: 148px;
+    height: 40px;
+
+    background: #4e75ff;
+
+    font-weight: 500;
+      font-size: 16px;
+    
+      /* line-height: 24px; */
+      line-height: 1.5;
+      letter-spacing: 0.04em;
+      color: #fff;
+}
+
+/* 6 */
+
+#controls{
+  display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 16px;
+
+    border-radius: 8px;
+      padding: 32px;
+      width: 486px;
+
+      background: #f6f6fe;
+}
+
+#controls input{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+
+    border: 1px solid #808080;
+      border-radius: 8px;
+      padding: 8px 32px;
+      min-width: 150px;
+
+      font-weight: 400;
+        font-size: 8px 72px;
+      
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #2e2f42;
+}
+
+#controls button{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 10px;
+
+    border-radius: 8px;
+      padding: 8px 32px;
+      width: 120px;
+      height: 40px;
+
+      font-weight: 500;
+        font-size: 16px;
+      
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #fff;
+}
+
+#controls button[data-create] {
+  background-color: #4e75ff;
+}
+
+#controls button[data-destroy] {
+  background-color: #ff4e4e;
+}
+
+#boxes{
+  display: flex;
+  flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 44px;
+
+    border-radius: 8px;
+      padding: 32px;
+
+      background: #f6f6fe;
 }
